--- a/css/style.css
+++ b/css/style.css
@@ -477,16 +477,12 @@ a:focus {
           transform: scale(1.1);
 }
 
+/* Filter menu styles */
 .food_section .filters_menu {
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   list-style-type: none;
   margin: 45px 0 20px 0;
 }
@@ -502,6 +498,7 @@ a:focus {
   color: #ffffff;
 }
 
+/* Menu item box styles */
 .food_section .box {
   position: relative;
   margin-top: 25px;
@@ -515,15 +512,9 @@ a:focus {
 
 .food_section .box .img-box {
   background: #f1f2f3;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 215px;
   border-radius: 0 0 0 45px;
   margin: -1px;
@@ -532,9 +523,8 @@ a:focus {
 
 .food_section .box .img-box img {
   max-width: 100%;
-  max-height: 145px;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  max-height: 100%;
+  transition: all 0.2s;
 }
 
 .food_section .box .detail-box {
@@ -554,12 +544,8 @@ a:focus {
 }
 
 .food_section .box .options {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .food_section .box .options a {
@@ -567,15 +553,9 @@ a:focus {
   height: 40px;
   border-radius: 100%;
   background: #ffbe33;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .food_section .box .options a svg {
@@ -585,34 +565,32 @@ a:focus {
 }
 
 .food_section .box:hover .img-box img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
-.food_section .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
+/* Adjusted layout for filtered items */
+.food_section .filters-content .grid {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 45px;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.food_section .btn-box a {
-  display: inline-block;
-  padding: 10px 55px;
-  background-color: #ffbe33;
-  color: #ffffff;
-  border-radius: 45px;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: none;
+.food_section .col-sm-6 {
+  width: calc(50% - 20px);
+  margin: 10px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
-.food_section .btn-box a:hover {
-  background-color: #e69c00;
+.food_section .col-sm-6:nth-child(2n) {
+  clear: both;
 }
+
+.food_section .box {
+  margin-bottom: 20px;
+}
+
 
 .about_section {
   background: #222831;
