--- a/css/style.css
+++ b/css/style.css
@@ -477,12 +477,16 @@ a:focus {
           transform: scale(1.1);
 }
 
-/* Filter menu styles */
 .food_section .filters_menu {
   padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   list-style-type: none;
   margin: 45px 0 20px 0;
 }
@@ -498,7 +502,6 @@ a:focus {
   color: #ffffff;
 }
 
-/* Menu item box styles */
 .food_section .box {
   position: relative;
   margin-top: 25px;
@@ -512,9 +515,15 @@ a:focus {
 
 .food_section .box .img-box {
   background: #f1f2f3;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 215px;
   border-radius: 0 0 0 45px;
   margin: -1px;
@@ -523,8 +532,9 @@ a:focus {
 
 .food_section .box .img-box img {
   max-width: 100%;
-  max-height: 100%;
-  transition: all 0.2s;
+  max-height: 145px;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 
 .food_section .box .detail-box {
@@ -544,8 +554,12 @@ a:focus {
 }
 
 .food_section .box .options {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .food_section .box .options a {
@@ -553,9 +567,15 @@ a:focus {
   height: 40px;
   border-radius: 100%;
   background: #ffbe33;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .food_section .box .options a svg {
@@ -565,32 +585,34 @@ a:focus {
 }
 
 .food_section .box:hover .img-box img {
-  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
-/* Adjusted layout for filtered items */
-.food_section .filters-content .grid {
+.food_section .btn-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 45px;
 }
 
-.food_section .col-sm-6 {
-  width: calc(50% - 20px);
-  margin: 10px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  overflow: hidden;
+.food_section .btn-box a {
+  display: inline-block;
+  padding: 10px 55px;
+  background-color: #ffbe33;
+  color: #ffffff;
+  border-radius: 45px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  border: none;
 }
 
-.food_section .col-sm-6:nth-child(2n) {
-  clear: both;
+.food_section .btn-box a:hover {
+  background-color: #e69c00;
 }
-
-.food_section .box {
-  margin-bottom: 20px;
-}
-
 
 .about_section {
   background: #222831;
