--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,6 @@ a:focus {
 
 .offer_section .box .detail-box h6 span {
   font-size: 2.5rem;
-  font-weight: bold;
 }
 
 .offer_section .box .detail-box a {
@@ -480,14 +479,8 @@ a:focus {
 
 .food_section .filters_menu {
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   list-style-type: none;
   margin: 45px 0 20px 0;
 }
@@ -496,6 +489,7 @@ a:focus {
   padding: 7px 25px;
   cursor: pointer;
   border-radius: 25px;
+  margin: 5px; /* Add margin to create space between items */
 }
 
 .food_section .filters_menu li.active {
@@ -516,15 +510,9 @@ a:focus {
 
 .food_section .box .img-box {
   background: #f1f2f3;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   height: 215px;
   border-radius: 0 0 0 45px;
   margin: -1px;
@@ -534,7 +522,6 @@ a:focus {
 .food_section .box .img-box img {
   max-width: 100%;
   max-height: 145px;
-  -webkit-transition: all .2s;
   transition: all .2s;
 }
 
@@ -555,12 +542,8 @@ a:focus {
 }
 
 .food_section .box .options {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
 
 .food_section .box .options a {
@@ -568,15 +551,9 @@ a:focus {
   height: 40px;
   border-radius: 100%;
   background: #ffbe33;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .food_section .box .options a svg {
@@ -586,17 +563,12 @@ a:focus {
 }
 
 .food_section .box:hover .img-box img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .food_section .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   margin-top: 45px;
 }
 
@@ -606,7 +578,6 @@ a:focus {
   background-color: #ffbe33;
   color: #ffffff;
   border-radius: 45px;
-  -webkit-transition: all 0.3s;
   transition: all 0.3s;
   border: none;
 }
