--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,49 @@ body {
 .layout_padding2 {
   padding: 75px 0;
 }
+#centeredContainer {
+  text-align: center;
+}
 
+.image-container {
+  position: relative;
+  padding-top:1%;
+  padding-bottom:1%;
+  max-width: 100%;
+}
+
+#centeredImage {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+#centeredText {
+  font-size: 24px;
+  font-weight: bold;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+}
+
+#orderButton {
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+#orderButton:hover {
+  background-color: #45a049;
+}
 .layout_padding2-top {
   padding-top: 75px;
 }
