--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,8 @@
 
   .custom_nav-container .navbar-nav {
     padding-top: 15px;
-padding-left: 0;
+    padding-left: 0;
+    padding-bottom: 15px;
     align-items: center;
   }
 
@@ -20,6 +21,7 @@ padding-left: 0;
   .custom_nav-container .navbar-nav .nav-item .nav-link {
     padding: 5px 25px;
     margin: 5px 0;
+    padding-bottom: 15px;
   }
 
   .slider_section .carousel-indicators {
@@ -93,5 +95,21 @@ padding-left: 0;
   .rent_solution_container .col-md-4.col-sm-6 {
     float: left;
     width: 50%;
+  }
+}
+@media (max-width: 992px) {
+  .slider_section {
+    margin-top: 60px; /* Adjust the margin-top value as needed */
+  }
+
+  .custom_nav-container {
+    margin-bottom: 60px; /* Adjust the margin-bottom value as needed */
+  }
+}
+@media (max-width: 768px) {
+  .user_option {
+    padding-bottom: 0; /* Reset padding for smaller screens */
+    padding-right:100px;
+    text-align: center; /* Center-align the content on small screens */
   }
 }
